--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
     --color05: #FFDC5E;
     --color06: #FDFF8F;
     --ui-color: #4299e1;
+    --subheading: 14px;
 }
 
 * {
@@ -21,6 +22,7 @@ body {
     background-color: var(--bg-color);
     color: var(--fg-color);
     font-family: 'Open Sans';
+    font-size: 18px;
 }
 
 a {
@@ -37,18 +39,25 @@ nav {
     max-width: 100%;
     margin: 1rem auto 0 auto;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
 .navs {
-    width: 20%;
     display: flex;
-    justify-content: space-around;
+    align-items: center;
+    justify-content: space-evenly;
 }
 
 .navs a {
     font-size: 0.9rem;
     color: #fff;
+    margin-right: 2rem;
+}
+
+.upperline {
+    background-color: var(--color01);
+    width: 100%;
+    height: 3px;
 }
 
 .heading {
@@ -58,8 +67,11 @@ nav {
 }
 
 .subheading {
-    font-size: 1rem;
+    margin: 2rem 2rem 0 2rem;
+    font-size: var(--subheading);
+    opacity: 0.5;
 }
+
 
 .projects {
     margin: 10rem auto 0 auto;
@@ -85,7 +97,8 @@ nav {
 
 .proj-desc {
     margin-top: 0.4rem;
-    font-size: 0.6rem;
+    font-size: var(--subheading);
+    opacity: 0.5;
 }
 
 .connect {
