--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
     --color06: #FDFF8F;
     --ui-color: #4299e1;
     --subheading: 14px;
+    --text-color: rgba(255, 255, 255, 0.75);
 }
 
 * {
@@ -43,7 +44,6 @@ nav {
 
 .icon-div {
     display: flex;
-    width: 5rem;
     justify-content: center;
 }
 
@@ -64,7 +64,6 @@ nav {
 
 a {
     text-decoration: none;
-    color: var(--color01);
 }
 
 h1 {
@@ -72,7 +71,11 @@ h1 {
     font-size: 3rem;
 }
 
-
+h2 {
+    background: linear-gradient(121deg, rgb(255, 255, 255), rgba(40, 40, 44, 0.566));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
 
 .navs a {
     font-size: 0.9rem;
@@ -133,15 +136,41 @@ h1 {
     max-width: 35rem;
 }
 
-.con-1 {
-    margin-top: 2rem;
+.footer-content {
+    margin-top: 1rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.other-links {
+    width: 10rem;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.con svg {
+    color: #fff;
+    width: 24px;
+}
+
+.resume {
+    display: block;
+    text-decoration: underline;
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 12px;
 }
 
 a:hover {
     color: var(--color01)
 }
 
-/* text animation */
+.footer-notes {
+    font-size: 12px;
+    color: var(--text-color);
+}
+
 .header {
     font-size: 3rem;
     letter-spacing: 2px;
@@ -162,6 +191,10 @@ a:hover {
     }
 }
 
+footer {
+    margin-bottom: 4rem;
+}
+
 @media screen and (max-width: 800px) {
 
     .projects,
@@ -173,4 +206,7 @@ a:hover {
         margin-bottom: 1rem;
     }
 
+    nav {
+        flex-direction: column;
+    }
 }
