--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
     --subheading: 14px;
     --text-color: rgb(255, 255, 255);
     --article-box-bg: hsl(212deg, 22%, 15%, 1);
+    --article-title: hsl(210deg, 25%, 96%);
 
 }
 
@@ -133,6 +134,7 @@ h2 {
 .proj-desc {
     margin-top: 0.4rem;
     font-size: var(--subheading);
+    opacity: 0.7;
 }
 
 .tech-stack {
@@ -155,18 +157,32 @@ h2 {
 
 .articles {
     margin-top: 2rem;
-    padding: 0.5em;
+    padding: 1.3em;
     display: grid;
     max-width: 35rem;
     background-color: hsl(212deg, 22%, 15%, 1);
+    border-radius: 2px;
 }
 
 .article-title {
-    font-size: 24px;
+    font-size: 18px;
+    color: var(--article-title);
+    font-weight: bold;
+}
+
+.article-title:hover {
+    color: var(--color01);
+}
+
+.read-more {
+    margin-top: 1rem;
+    font-weight: bold;
+    font-size: 12px;
 }
 
 .article-desc {
-    font-size: var(--subheading);
+    margin-top: 0.5rem;
+    font-size: 12px;
     color: var(--text-color);
 }
 
