--- a/style.css
+++ b/style.css
@@ -71,16 +71,7 @@ a {
     text-decoration: none;
 }
 
-h1 {
-    color: var(--fg-color);
-    font-size: 3rem;
-}
 
-h2 {
-    background: linear-gradient(121deg, rgb(255, 255, 255), rgba(40, 40, 44, 0.566));
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-}
 
 .navs a {
     font-size: 0.9rem;
@@ -106,6 +97,12 @@ h2 {
     max-width: 25rem;
 }
 
+
+h2 {
+    background: linear-gradient(121deg, rgb(255, 255, 255), rgba(40, 40, 44, 0.566));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
 
 .projects,
 .article-section {
@@ -159,10 +156,8 @@ h2 {
 
 .articles {
     margin-top: 2rem;
-    padding: 1em;
     display: grid;
     max-width: 35rem;
-    background-color: hsl(212deg, 22%, 15%, 1);
     border-radius: 2px;
 }
 
@@ -175,6 +170,16 @@ h2 {
 .read-more {
     margin-top: 1rem;
     font-size: 12px;
+}
+
+.article {
+    margin-top: 1rem;
+}
+
+.article,
+.article-top {
+    padding: 1em;
+    background-color: hsl(212deg, 22%, 15%, 1);
 }
 
 .article-desc {
