--- a/style.css
+++ b/style.css
@@ -178,8 +178,8 @@ h2 {
 
 .article,
 .article-top {
-    padding: 1em;
-    background-color: hsl(212deg, 22%, 15%, 1);
+    /* padding: 1em; */
+    /* background-color: hsl(212deg, 22%, 15%, 1); */
 }
 
 .article-desc {
