--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 :root {
     --fg-color: #ffffff;
-    --bg-color: #000;
+    --bg-color: #1e2028;
+    --body-bg: #1e2028;
     --color00: #E1578A;
     --color01: #FF69EB;
     --color02: #FF86C8;
@@ -9,7 +10,7 @@
     --color05: #FFDC5E;
     --color06: #FDFF8F;
     --ui-color: #4299e1;
-    --subheading: 14px;
+    --subheading: 16px;
     --text-color: rgb(255, 255, 255);
     --article-box-bg: hsl(212deg, 45%, 9%, 1);
     --article-title: hsl(210deg, 25%, 96%);
@@ -24,10 +25,10 @@
 
 body {
     color: var(--fg-color);
-    font-family: 'Open Sans';
+    font-family: 'Open Sans', sans-serif;
     font-size: 18px;
     /* background-color: rgb(15, 22, 36); */
-    background-color: hsl(210deg, 30%, 8%);
+    background-color: var(--body-bg);
 }
 
 nav {
@@ -89,25 +90,30 @@ a {
 
 .heading {
     margin: 5rem auto 0 auto;
-    max-width: 35rem;
+    width: 40rem;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
 }
 
 .subheading {
-    margin: 2rem auto 0 auto;
     font-size: var(--subheading);
     opacity: 0.5;
-    max-width: 25rem;
+    max-width: 30rem;
 }
 
 
 h2 {
+    background-color: gray;
     background: linear-gradient(121deg, rgb(255, 255, 255), rgba(40, 40, 44, 0.566));
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
 
 .heading-styler {
+    margin: 0.6rem 0;
     width: 4rem;
     border-radius: 5px;
     height: 0.3rem;
@@ -115,11 +121,12 @@ h2 {
 }
 
 .projects,
+.connect,
 .article-section,
 .skill-section {
     margin: 5rem auto 0 auto;
     height: auto;
-    max-width: 35rem;
+    width: 40rem;
     min-width: auto;
     display: flex;
     flex-direction: column;
@@ -127,9 +134,9 @@ h2 {
 
 .proj {
     margin-top: 2rem;
-    background-color: var(--article-box-bg);
     padding: 1rem;
-    border-radius: 2px;
+    background-color: #252731;
+    border-radius: 10px;
 }
 
 .proj-heading {
@@ -166,7 +173,7 @@ h2 {
 .articles {
     margin-top: 2rem;
     display: grid;
-    max-width: 35rem;
+    width: 35rem;
     border-radius: 2px;
 }
 
@@ -194,7 +201,7 @@ h2 {
 
 .skills {
     margin-top: 2rem;
-    max-width: 45rem;
+    width: 45rem;
     display: grid;
     gap: 8px;
     grid-template-columns: 1fr 1fr 1fr;
@@ -222,12 +229,6 @@ h2 {
 .skill-desc {
     font-size: 12px;
     margin-top: 0.5rem;
-}
-
-
-.connect {
-    margin: 5rem auto 0 auto;
-    max-width: 35rem;
 }
 
 
@@ -263,6 +264,23 @@ h2 {
     font-size: 12px;
 }
 
+.download-resume {
+    border: none;
+    border-radius: 50px;
+    color: rgb(255, 255, 255);
+    background-color: var(--color02);
+    opacity: 0.9;
+    font-size: 16px;
+    font-weight: 600;
+    cursor: pointer;
+    padding: 16px 24px;
+}
+
+.download-resume:hover {
+    opacity: 1;
+    transition: all ease;
+}
+
 a:hover {
     color: var(--color01)
 }
@@ -273,7 +291,8 @@ a:hover {
 }
 
 .header {
-    font-size: 3rem;
+    font-size: 36px;
+    font-weight: bold;
     letter-spacing: 2px;
     color: #f35626;
     background-image: linear-gradient(to left, #79c2ff, #4a5888);
