--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ body {
     font-family: 'Open Sans', sans-serif;
     font-size: 18px;
     background-color: var(--body-bg);
+    zoom: 110%;
 }
 
 nav {
@@ -122,7 +123,8 @@ h2 {
 .connect,
 .article-section,
 .acheivements,
-.skill-section {
+.skill-section,
+.experiences {
     margin: 5rem auto 0 auto;
     height: auto;
     max-width: 40rem;
@@ -134,8 +136,14 @@ h2 {
 .proj {
     margin-top: 2rem;
     padding: 1rem;
-    background-color: #252731;
     border-radius: 10px;
+    border: 1px solid rgba(66, 66, 66, 0.5);
+
+}
+
+.proj:hover {
+    background-color: #252731;
+    transition: all ease-in-out;
 }
 
 .proj-heading {
@@ -314,7 +322,8 @@ a:hover {
     grid-template-columns: 1fr 1fr 1fr;
 }
 
-.acheivements-card {
+.acheivements-card,
+.experience-card {
     padding: 1rem;
     border-radius: 10px;
     border: 1px solid rgba(66, 66, 66, 0.5);
@@ -325,6 +334,56 @@ a:hover {
     cursor: pointer;
 }
 
+.experience-card:hover {}
+
+.experience-box {
+    margin-left: 0.7rem;
+    flex: 9;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.experience-card:hover {
+    cursor: pointer;
+    background-color: #252731;
+
+}
+
+.experience-timeline {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: center;
+    max-width: 40rem;
+    width: auto;
+    margin-top: 2rem;
+}
+
+.verticle-line {
+    flex: 1;
+    max-width: 4px;
+    height: 180px;
+    background-color: #252731;
+    position: relative;
+    border-radius: 40px;
+}
+
+.line-dot-1 {
+    position: absolute;
+    top: 2rem;
+    right: -6px;
+}
+
+.line-dot-2 {
+    position: absolute;
+    top: 8rem;
+    right: -6px;
+}
+
+
+
+
+
 .acheivements-card-header {
     font-size: 24px;
     font-family: 'Space Mono', monospace;
@@ -334,6 +393,31 @@ a:hover {
 
 .acheivements-card-desc {
     opacity: 0.8;
+}
+
+.experience-date {
+    font-size: 12px;
+}
+
+.job-info {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+}
+
+.job-title {
+    font-size: 16px;
+    font-weight: bold;
+}
+
+.company-name {
+    font-size: 12px;
+}
+
+.experience-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 @-webkit-keyframes hue {
@@ -357,7 +441,8 @@ footer {
     .heading,
     .article-section,
     .skill-section,
-    .acheivements {
+    .acheivements,
+    .experiences {
         padding: 0 15px 0 15px;
     }
 
@@ -376,6 +461,10 @@ footer {
     .skills,
     .acheivements-box {
         grid-template-columns: 1fr 1fr;
+    }
+
+    body {
+        zoom: 100%;
     }
 
 
